# lazy-audio

./: LICENSE  README.md
envelopes/: CMakeLists.txt
envelopes/src/: envelope.cpp  envelope.h  program.cpp
musical-scale/: CMakeLists.txt
musical-scale/src/: program.cpp
oscillator/: CMakeLists.txt
oscillator/src/: program.cpp
sawtooth-oscillator/: CMakeLists.txt
sawtooth-oscillator/src/: program.cpp
square-wave-oscillator/: CMakeLists.txt
square-wave-oscillator/src/: program.cpp
